--- a/eden-app-fe-turista/src/components/app/App.css
+++ b/eden-app-fe-turista/src/components/app/App.css
@@ -5,7 +5,7 @@
 .site-layout-content {
   min-height: 280px;
   padding: 24px;
-  background: #fff;
+  background: white;
 }
 #components-layout-demo-top .logo {
   float: left;
