--- a/eden-app-fe-turista/src/components/app/App.css
+++ b/eden-app-fe-turista/src/components/app/App.css
@@ -6,6 +6,9 @@
   min-height: 280px;
   padding: 24px;
   background: white;
+  text-align: left;
+  /* font-family: Roboto; */
+  font-style: normal;
 }
 #components-layout-demo-top .logo {
   float: left;
@@ -17,4 +20,9 @@
 .ant-row-rtl #components-layout-demo-top .logo {
   float: right;
   margin: 16px 0 16px 24px;
+}
+
+.main-layout{
+  padding: 0 1% 0 1%;
+  background-color: white;
 }
