--- a/eden-app-fe-turista/src/components/categories/categoryItem.css
+++ b/eden-app-fe-turista/src/components/categories/categoryItem.css
@@ -1,6 +1,23 @@
 .category-item .card{
-    width: 250px;
-    height: 135px;
+    width: 315px;
+    height: 170px;
     background-color: #C4C4C4;
     border-radius: 12px;
+}
+
+.category-item .card .photo{
+    width: 315px;
+    height: 170px;
+    background-color: #C4C4C4;
+    border-radius: 12px;
+}
+
+.category-item .card-description{
+    width: 315px;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 12px;
+    letter-spacing: 0em;
+    text-align: left;
 }
