--- a/eden-app-fe-turista/src/components/modules/productModule/productItem.css
+++ b/eden-app-fe-turista/src/components/modules/productModule/productItem.css
@@ -20,6 +20,7 @@
     letter-spacing: 0em;
     text-align: center;
     background-color: #C4C4C4;
+    border-radius: 12px;
 }
 
 .item-description{
