Mappings and css styles

--- a/eden-app-fe-turista/src/components/modules/productModule/productItem.css
+++ b/eden-app-fe-turista/src/components/modules/productModule/productItem.css
@@ -5,6 +5,12 @@
     border-radius: 12px;
 }
 
+.product-item .card .product-image{
+    width: 315px;
+    height: 280px;
+    border-radius: 12px;
+}
+
 .item-overview{
     padding: 10px 0 10px 0;
 }
@@ -24,23 +30,33 @@
 }
 
 .item-description{
-    font-family: Roboto;
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 12px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
+    padding-right: 10px;
 }
 
 .description-container{
-    padding-left: 25px;
-    padding-right: 25px;
     overflow-y: auto;
     overflow-x: hidden;
     width: 100%;
     height: 100%;
     box-sizing: content-box;
+}
+
+.description-container .product-title{
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0em;
+    text-align: left;
+    position: absolute;
+    top: 45%;
+    left: 5%;
 }
 
 .description-container .price{
@@ -49,12 +65,14 @@
     font-weight: 500;
     line-height: 42px;
     text-align: right;
-    padding-right: 25px;
+    padding-right: 5%;
 }
 
 .description-container .general{
-    padding-right: 25px;
+    padding-right: 50px;
+    padding-left: 25px;
 }
+
 
 /* Modal properties (take this to another place, plz) */
 .ant-modal.custom-modal{
@@ -65,13 +83,18 @@
     border-radius: 12px;
 }
 
-.ant-modal-header{
+.custom-modal .background{
     height: 280px;
     border-radius: 12px;
     background-color: #C4C4C4;
+}
+
+.ant-modal-body{
+    border-radius: 12px;
     display: flex;
     flex-wrap: wrap;
 }
+
 .ant-modal-title{
     font-size: 45px;
     font-style: normal;
