--- a/eden-app-fe-turista/src/components/organization/organizationItemDetail.css
+++ b/eden-app-fe-turista/src/components/organization/organizationItemDetail.css
@@ -10,6 +10,18 @@
     position: relative;
 }
 
+.organization-item-detail .banner .card-item .photo-item{  
+    height: 200px;
+    width: auto;
+    background: #39B0F3;
+    border-radius: 12px;
+    position: relative;
+}
+
 .organization-item-detail .description{  
     padding-top: 10px;
+}
+
+.organization-item-detail .slick-list{
+    height: 380px;
 }
