--- a/eden-app-fe-turista/src/components/home/home.css
+++ b/eden-app-fe-turista/src/components/home/home.css
@@ -1,3 +1,11 @@
 .home{
     text-align: left;
 }
+
+.organization-items {
+    padding-top: 40px;
+}
+
+.organization-items .title-hide{
+    display: none;
+}
