--- a/eden-app-fe-turista/src/components/organization/organizationItem.css
+++ b/eden-app-fe-turista/src/components/organization/organizationItem.css
@@ -32,3 +32,7 @@
     letter-spacing: 0em;
     text-align: left;
 }
+
+.slick-slider .slick-track, .slick-slider .slick-list{
+    margin-left:0;
+}
