--- a/eden-app-fe-turista/src/components/organization/organizationItemDetail.css
+++ b/eden-app-fe-turista/src/components/organization/organizationItemDetail.css
@@ -20,8 +20,20 @@
 
 .organization-item-detail .description{  
     padding-top: 10px;
+    padding-bottom: 25px;
 }
 
-.organization-item-detail .slick-list{
-    height: 380px;
+.organization-item-detail .address{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.organization-item-detail .social-icon{
+    font-size: 30px;
+    padding-top: 5px;
+    padding-right: 5px;
 }
