--- a/eden-app-fe-turista/src/components/app/App.css
+++ b/eden-app-fe-turista/src/components/app/App.css
@@ -32,3 +32,10 @@
   background-color: white;
   height: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .site-layout-content {
+    padding-left: 6%;
+  }
+  
+}
