--- a/eden-app-fe-turista/src/components/categories/categoryItem.css
+++ b/eden-app-fe-turista/src/components/categories/categoryItem.css
@@ -23,5 +23,20 @@
     font-weight: 400;
     line-height: 12px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
+}
+
+@media only screen and (max-width: 600px) {
+    .category-item .card{
+        width: 270px;
+    }
+
+    .category-item .card-description{
+        width: 270px;
+    }
+
+    .category-item .card .photo{
+        width: 270px;
+        border-radius: 0px;
+    }
 }
