--- a/eden-app-fe-turista/src/components/organization/organizationItem.css
+++ b/eden-app-fe-turista/src/components/organization/organizationItem.css
@@ -1,6 +1,7 @@
 .organization-item {
     padding-bottom: 25px;
 }
+
 .organization-item .card{
     width: 315px;
     height: 170px;
@@ -30,9 +31,30 @@
     font-weight: 400;
     line-height: 12px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
 }
 
 .slick-slider .slick-track, .slick-slider .slick-list{
     margin-left:0;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+    .organization-item .card{
+        width: 270px;
+    }
+
+    .organization-item .card-title{
+        width: 270px;
+    }
+
+    .organization-item .card-description{
+        width: 270px;
+    }
+    
+    .organization-item .card .card-image{
+        width: 270px;
+        border-radius: 0px;
+    }
 }
