fix: Events read from Endpoint in Homepage

--- a/eden-app-fe-turista/src/components/banner/banner.css
+++ b/eden-app-fe-turista/src/components/banner/banner.css
@@ -1,7 +1,12 @@
 .header-banner{
-    padding-right: 40px;
+    padding-right: 10px;
 }
-img.banner-photo{
+
+.header-banner img.banner-photo{
     width: 100%;
 }
 
+.header-banner img.banner-photo-mobile{
+    height: 380px;
+    width: 340px;
+}
