--- a/eden-app-fe-turista/src/components/banner/banner.css
+++ b/eden-app-fe-turista/src/components/banner/banner.css
@@ -5,9 +5,11 @@
 .header-banner img.banner-photo{
     width: 100%;
     height: 30vw;
+    border-radius: 12px;
 }
 
 .header-banner img.banner-photo-mobile{
     height: 380px;
     width: 340px;
+    border-radius: 12px;
 }
